tests/NormalTests/paczka1/fuzzy1/47480962.err
Error in line 5: EReVFY8df A296 70,7
Error in line 4: 936nz45mW S303 80,5
Error in line 11: A87 A298 5,5
Error in line 19: A87 A296 18,7
Error in line 16: tu8i5 A296 8,3
